<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/archive" />
        <item
            android:id="@+id/nav_whatIf"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/what_if" />
        <item
            android:id="@+id/nav_blag"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/blag" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/store" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_feed"
            android:title="@string/feed" />
        <item
            android:id="@+id/nav_email"
            android:title="@string/email" />
    </group>

    <item
        android:id="@+id/communicate"
        android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/favorites" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
